<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_background"
    android:gravity="center">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/dialogContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_privacy_text"
            android:textSize="14sp"
            android:padding="8dp" />
    </ScrollView>


    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:backgroundTint="#E20000"
        android:textColor="#FFFFFF"
        android:layout_marginTop="8dp" />

</LinearLayout>
